# File-Parser

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  CODE_QUALITY.md  COMPILER_SUPPORT.md  CONTRIBUTING.md  README.md  build.bat  build.sh  dev-quality.bat  dev-quality.sh  dev.sh  vcpkg.json
.github/workflows/: ci.yml
doc/: windows-shared-library-fix.md
docs/: README.md
docs/bugs/: README.md  windows-build-configuration-fix.md  windows-shared-library-fix.md
docs/inside/: BUILD.md  CODE_QUALITY.md  README.md
docs/task-reports/: README.md  issue-10-handle-errors.md  issue-3-unit-testing-framework.md  issue-6-github-actions-ci.md  issue-7-file-io-and-application-layer.md  template.md
include/: compression.h  dummy.h  file_parser_error.h  zip_archive.h  zip_entry.h  zip_reader.h
src/: compression.cpp  dummy.cpp  file_parser_error.cpp  main.cpp  zip_archive.cpp  zip_reader.cpp
tests/: dummy_test.cpp  sample_test.cpp  zip_reader_test.cpp
